--- a/FirstTaskYal/Resources/Base.lproj/Main.storyboard
+++ b/FirstTaskYal/Resources/Base.lproj/Main.storyboard
@@ -13,7 +13,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
-                            <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="cellsPrototype" rowHeight="80" id="KVz-cs-Z7C" customClass="AVTableViewCell">
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="AVTableViewCellPrototype" rowHeight="80" id="KVz-cs-Z7C" customClass="AVTableViewCell">
                                 <rect key="frame" x="0.0" y="22" width="320" height="80"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KVz-cs-Z7C" id="hkW-u3-5jK">
@@ -34,8 +34,8 @@
                                     </subviews>
                                 </tableViewCellContentView>
                                 <connections>
-                                    <outlet property="cellImageView" destination="0du-vP-rdq" id="Q4L-Re-kHK"/>
-                                    <outlet property="cellTextLabel" destination="mSw-jK-Qd4" id="xf1-RA-WVO"/>
+                                    <outlet property="imageView" destination="0du-vP-rdq" id="Fvd-bL-pLv"/>
+                                    <outlet property="textLabel" destination="mSw-jK-Qd4" id="WhL-be-DiU"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
